--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,19 @@
   <body>
     <noscript>
       <strong>We're sorry but hello-world doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      
     </noscript>
+    <script>
+      /*For github pages, redirect to index.html from 404*/
+      (function(){
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+    </script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
