--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,16 @@
       })();
     </script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114361661-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-114361661-2');
+    </script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
